[gd_scene load_steps=6 format=3 uid="uid://bjoiwa2wyss7w"]

[ext_resource type="Theme" uid="uid://2x31sgdretky" path="res://assets/styles/style_theme.tres" id="1_q2qf7"]
[ext_resource type="Script" uid="uid://bhds28eug7fxt" path="res://scripts/handlers/GenerationHandler.gd" id="1_ujye4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_lxp2v"]
bg_color = Color(0.1935, 0.21487498, 0.45, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r1i68"]
bg_color = Color(0.19215687, 0.21568628, 0.4509804, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ujye4"]
bg_color = Color(0.6, 0.066000015, 0.066000015, 1)

[node name="UIOverlay" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2qf7")
script = ExtResource("1_ujye4")

[node name="GenerationPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -454.0
offset_top = -374.0
offset_right = -11.0
offset_bottom = -116.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lxp2v")

[node name="RTL_TITLE" type="RichTextLabel" parent="GenerationPanel"]
layout_mode = 0
offset_right = 156.0
offset_bottom = 31.0
text = "Generate:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GeneratorDropdown" type="OptionButton" parent="GenerationPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 29.0
offset_right = 184.0
offset_bottom = 66.0
toggle_mode = false
allow_reselect = true
item_count = 3
popup/item_0/text = "Rooms & Corridors"
popup/item_0/id = 0
popup/item_1/text = "Drunken Walk"
popup/item_1/id = 1
popup/item_2/text = "Perlin Noise"
popup/item_2/id = 2

[node name="GenerateButton" type="Button" parent="GenerationPanel"]
layout_mode = 0
offset_left = 275.0
offset_top = 203.0
offset_right = 437.0
offset_bottom = 242.0
text = "GO!"

[node name="ClearEntriesButton" type="Button" parent="GenerationPanel"]
layout_mode = 0
offset_left = 275.0
offset_top = 157.0
offset_right = 437.0
offset_bottom = 196.0
text = "CLEAR"

[node name="PanelContainer" type="PanelContainer" parent="GenerationPanel"]
layout_mode = 0
offset_left = 6.0
offset_top = 72.0
offset_right = 264.0
offset_bottom = 190.0
theme_override_styles/panel = SubResource("StyleBoxFlat_r1i68")

[node name="VBoxContainer" type="VBoxContainer" parent="GenerationPanel/PanelContainer"]
layout_mode = 2

[node name="MapOptionsPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -354.0
offset_top = -484.0
offset_right = -12.0
offset_bottom = -402.0
grow_horizontal = 0
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_lxp2v")

[node name="RTL_TITLE" type="RichTextLabel" parent="MapOptionsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 2.0
offset_right = 177.0
offset_bottom = 32.0
text = "Map Options:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="RTL_MWIDTH" type="RichTextLabel" parent="MapOptionsPanel"]
layout_mode = 0
offset_left = 1.0
offset_top = 38.0
offset_right = 82.0
offset_bottom = 69.0
text = "WIDTH:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FIELD_WIDTH" type="LineEdit" parent="MapOptionsPanel"]
layout_mode = 0
offset_left = 85.0
offset_top = 37.0
offset_right = 153.5625
offset_bottom = 68.0
placeholder_text = "/int/"
alignment = 1

[node name="RTL_MHEIGHT" type="RichTextLabel" parent="MapOptionsPanel"]
layout_mode = 0
offset_left = 159.0
offset_top = 38.0
offset_right = 252.0
offset_bottom = 75.0
text = "HEIGHT:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FIELD_HEIGHT" type="LineEdit" parent="MapOptionsPanel"]
layout_mode = 0
offset_left = 255.0
offset_top = 37.0
offset_right = 323.5625
offset_bottom = 68.0
placeholder_text = "/int/"
alignment = 1

[node name="RTL_HIDEUI" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 248.0
grow_vertical = 0
text = "Press X to Hide UI."
horizontal_alignment = 1
vertical_alignment = 1

[node name="Warning" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -357.0
offset_top = -55.0
offset_right = -38.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2

[node name="WarningPanel" type="PanelContainer" parent="Warning"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ujye4")

[node name="WarningText" type="RichTextLabel" parent="Warning/WarningPanel"]
layout_mode = 2
text = "SampleTextSampleTextSampleText"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="item_selected" from="GenerationPanel/GeneratorDropdown" to="." method="_on_d_generator_button_item_selected"]
[connection signal="pressed" from="GenerationPanel/GenerateButton" to="." method="_on_generate_button_pressed"]
[connection signal="pressed" from="GenerationPanel/ClearEntriesButton" to="." method="_on_clear_entries_pressed"]
